--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,28 +8,33 @@
 
    .main-menu {
       display: flex;
-     
-      height: 80px;
-
-     
+      max-width: 940px;
+      margin: 36px auto;
   }
 
-  .logo img {
-    margin-top: 36.1px;
-    margin-left: 231px;
-  }
-
-  .menu {
+  header .menu {
     display: flex;
-    margin-left: 30px;
-    margin-top: 36.1px;;
-}
+    margin-left: 123px;
+  }
+
+  header .menu a {
+    margin-right: 30px;
+    font-size: 16px;
+    text-decoration: none;
+    color: black;
+    font-family: 'Roboto' , sans-serif;
+
+  }
+
+  header .menu a:hover {
+    font-weight: bold;
+  }
 
   .banner {
       width: 940px;
+      margin: 0 auto 50px auto;
       height: 366px;
       background-color: #FBDFDB;
-      margin-left: 230px;
       border-radius: 30px;
       position: relative;
   }
@@ -39,8 +46,33 @@
   }
 
   .banner .descricao h2 {
-      margin-left: 60px;
-      
+      font-size: 32px;
+      font-weight: bold;
+      font-family: 'Roboto', sans-serif;
+      color: #111111;
+      position: absolute;
+      left: 60px;
+      top: 117px;   
   }
 
- 
+  .banner .descricao p {
+    font-size: 18px;
+    font-family: 'Roboto' , sans-serif;
+    width: 316px;
+    height: 84px;
+    line-height: 28px;
+    color:#000000;
+    position: absolute;
+    left: 60px;
+    top: 165px;
+
+  }
+
+  .title {
+    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    max-width: 940px;
+    margin: 0 auto 20px auto; 
+  }
+  
