finalizacao da pagina home

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
 
   .banner {
       width: 940px;
-      margin: 0 auto 50px auto;
+      margin: 0 auto 50px;
       height: 366px;
       background-color: #FBDFDB;
       border-radius: 30px;
@@ -73,6 +73,51 @@
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     max-width: 940px;
-    margin: 0 auto 20px auto; 
+    margin: 0 auto 20px; 
+  }
+
+  .galeria_receitas {
+    margin: 0 auto;
+    max-width: 940px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
   }
   
+  .receitas img {
+    width: 300px;
+    height: 140px;
+    border-radius: 15px;
+  }
+
+  .receitas h4 {
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    color: #111111;
+    font-weight: normal;
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+
+  .receitas h5 {
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif;
+    color: #777777;
+    font-weight: normal;  
+  }
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 63px;
+  margin-top: 50px;
+  background: #EEEEEE;
+}
+
+footer p {
+  font-size: 14px;
+  color:#999999;
+  font-family: 'Roboto', sans-serif;
+  
+}
