--- a/styles.css
+++ b/styles.css
@@ -172,3 +172,32 @@ footer p {
   font-family: 'Roboto' , sans-serif;
   color: #444444;
 }
+
+.modal_overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+
+}
+
+.modal {
+  background-color: white;
+  width: 660px;
+  height: 413px;
+  margin: 20vh auto;
+  border-radius: 16px;
+  position: relative;
+  
+}
+
+.modal .close-modal {
+font-family: 'Roboto', sans-serif;
+font-size: 16px;
+color: #999999;
+position: absolute;
+bottom: 30px;
+right: 281px;
+cursor: pointer;
+}
